--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "moment": "^2.22.2"
+    "moment": "^2.22.2",
+    "url-parse": "^1.4.3"
   }
 }
